--- a/index.html
+++ b/index.html
@@ -199,12 +199,18 @@
     <!--INICIO FOOTER-->
     <footer class="bg-dark text-white pt-5 pb-4">
         <div class="container text-center text-md-left ">
+
             <div class="row text-center text-md-left ">
 
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-5 mb-5 ">
                     <a href="# ">
                         <img src="./img/jpg/Logo-DMD.png " alt="Logo DMD " style="width: 170px; ">
                     </a>
+                </div>
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 ">
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Sobre</h5>
+                    <p class="text-center">Somos uma empresa especializada na Impressão Serigráfica e Silk-Screen de Painéis Frontais, Etiquetas Adesivos Teclados de Membrana e Placas de Sinalização nos mais diversos materiais, entre eles Poliestireno, PVC, Policarbonato e
+                        Vinil Adesivo.</p>
                 </div>
                 <div class="col-md-3 col-lg- col-xl-3 mx-auto mt-3 ">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Produtos</h5>
@@ -218,13 +224,18 @@
                         <a class="text-white " style="text-decoration: none; " href="# ">Adesivos</a>
                     </p>
                 </div>
-
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 ">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Sobre</h5>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis commodi sapiente aliquam quam vero, omnis quaerat, hic ipsum, eum itaque veritatis velit.</p>
-                </div>
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 ">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Contato</h5>
+                    <a href="#">
+                        <p class="text-white">
+                            <i class="bi bi-whatsapp"></i>&nbsp;&nbsp;(11) 94830-7817
+                        </p>
+                    </a>
+                    <a href="#">
+                        <p class="text-white">
+                            <i class="bi bi-envelope"></i>&nbsp;&nbsp;danny83910@gmail.com
+                        </p>
+                    </a>
                 </div>
             </div>
         </div>
