--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="row gy-4">
                 <div class="col-lg-4">
                     <div class="project-wrapper">
-                        <img src="./img/jpg/teste1.jpg" alt="">
+                        <img src="./img/img_4.jpg" alt="">
                         <a href="https://dunamisgrafdg.web.app/index.html"><i class="bx bxs-info-circle btn btn-danger"></i></a>
                     </div>
                 </div>
@@ -144,13 +144,13 @@
                     <div class="row gy-4">
                         <div class="col-lg-12">
                             <div class="project-wrapper">
-                                <img src="./img/jpg/teste2.jpg" alt="">
+                                <img src="./img/fundoHome.jpg" alt="">
                                 <a href="#"><i class="bx bxs-info-circle btn btn-danger"></i></a>
                             </div>
                         </div>
                         <div class="col-lg-12">
                             <div class="project-wrapper">
-                                <img src="./img/jpg/teste3.jpg" alt="">
+                                <img src="./img/slider2.jpg" alt="">
                                 <a href=""><i class="bx bxs-info-circle btn btn-danger"></i></a>
                             </div>
                         </div>
@@ -158,7 +158,7 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="project-wrapper">
-                        <img src="./img/jpg/teste1.jpg" alt="">
+                        <img src="./img/slider1.jpg" alt="">
                         <a href="#"><i class="bx bxs-info-circle btn btn-danger"></i></a>
                     </div>
                 </div>
@@ -180,13 +180,13 @@
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner" style="border-radius: 10px; position: relative;">
                             <div class="carousel-item active">
-                                <img src="./img/img1.jpg" class="d-block w-100 " alt="img-qualidade">
+                                <img src="./img/jpg/imagem1.jpg" class="d-block w-100 " alt="img-qualidade">
                             </div>
                             <div class="carousel-item ">
-                                <img src="./img/img2.jpg " class="d-block w-100 " alt="img-cliente">
+                                <img src="./img/jpg/imagem2.jpg " class="d-block w-100 " alt="img-cliente">
                             </div>
                             <div class="carousel-item ">
-                                <img src="./img/img3.jpg " class="d-block w-100 " alt="img-">
+                                <img src="./img/jpg/imagem3.jpg" class="d-block w-100 " alt="img-">
                             </div>
                         </div>
                     </div>
@@ -209,8 +209,7 @@
                 </div>
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 ">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Sobre</h5>
-                    <p class="text-center">Somos uma empresa especializada na Impressão Serigráfica e Silk-Screen de Painéis Frontais, Etiquetas Adesivos Teclados de Membrana e Placas de Sinalização nos mais diversos materiais, entre eles Poliestireno, PVC, Policarbonato e
-                        Vinil Adesivo.</p>
+                    <p class="text-center">Somos especialista em Silk-Screen de Painéis Frontais, Etiquetas Adesivos Teclados de Membrana nos mais diversos tipos de materiais.</p>
                 </div>
                 <div class="col-md-3 col-lg- col-xl-3 mx-auto mt-3 ">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Produtos</h5>
