--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
     <!-- LINK ICONES -->
     <link href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
@@ -14,7 +11,7 @@
     <!-- ANIMAÇÕES CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <!-- CSS PERSONALIZADO -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
 
     <title>DMD - Teclados de membrana</title>
 </head>
@@ -24,12 +21,15 @@
         <!--NAVBAR-->
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="# "><img class="logo " src="img/jpg/Logo-DMD.png " alt="Logo MDM "></a>
+                <a class="navbar-brand" href="# "><img class="logo " src="./assets/img/logo.png " alt="Logo MDM "></a>
                 <i class="bi bi-list navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarmenu"></i>
                 <div class="collapse navbar-collapse" id="navbarmenu">
                     <ul class="navbar-nav ms-auto px-3">
                         <li class="nav-item ">
-                            <a class="nav-link " href="# ">Home</a>
+                            <a class="nav-link" href="# ">Home</a>
+                        </li>
+                        <li class="nav-item ">
+                            <a class="nav-link " href="# ">Serviços</a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link " href="# ">Produtos</a>
@@ -50,8 +50,8 @@
             <div class="row">
                 <div class="col-lg-7 mx-auto text-center container-content">
                     <h1 class="display-4 text-white h1-top">Tudo o que você precisa em impressão Silk-Screen!</h1>
-                    <p class="text-white my-3 p-top">Aqui você encontrará uma solução personalizada de acordo com a sua necessidade. Trabalhamos para atender rápido e com excelência.</p>
-                    <a class="btn btn-secondary" href="#">Contato</a>
+                    <p class="text-white my-3 p-top">Aqui você encontrará uma solução personalizada de acordo com a sua necessidade.</p>
+                    <a class="btn btn-secondary" href="#">Conheça os nossos serviços</a>
                 </div>
             </div>
         </div>
@@ -59,49 +59,24 @@
     <!--FIM SECTION HOME INICIAL-->
     <!--iNICIO SECTION HOME SECUNDARIA-->
     <section class="secundaria-home overflow-hidden">
-        <div class=" container">
-            <div class="row mb-5">
-                <div class="col-md-8 mx-auto text-center">
-                    <h2 class="text-primary mb-4">O que você precisa?</h2>
-                    <p class="fsc-p mb-3">Desenvolvemos e produzimos o seu produto de acordo com a sua nessecidade. Produzimos com excelência e matéria prima de qualidade.</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h2 class="text-primary">PODEMOS AJUDAR</h2>
+                    <p class="mt-3">Desenvolvemos e produzimos o seu produto de acordo com a sua necessidade. Podemos contribuir em seus projetos com nossa grande experiência e assim gerar excelentes resultados para sua empresa.</p>
                 </div>
-            </div>
-
-            <div class="row g-4">
-                <div class="col-lg-3 col-sm-6 coll-box">
-                    <div class="service card-effect">
-                        <div class="iconbox">
-                            <i class="bx bxs-edit-alt"></i>
-                        </div>
-                        <h5 class="mt-4 mb-2">Desenvolvimento</h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum,ducimus recusandae, doloremque quam non dolore obcaecati!</p>
+                <div class="row mt-5">
+                    <div class="col-md-3">
+                        <h3 class="text-primary">QUALIDADE</h3>
                     </div>
-                </div>
-                <div class="col-lg-3 col-sm-6 coll-box">
-                    <div class="service card-effect">
-                        <div class="iconbox">
-                            <i class="bx bxs-color-fill"></i>
-                        </div>
-                        <h5 class="mt-4 mb-2">Impressão</h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum,ducimus recusandae, doloremque quam non dolore obcaecati!</p>
+                    <div class="col-md-3">
+                        <h3 class="text-primary">EXPERIÊNCIA</h3>
                     </div>
-                </div>
-                <div class="col-lg-3 col-sm-6 coll-box">
-                    <div class="service card-effect">
-                        <div class="iconbox">
-                            <i class="bx bxs-note"></i>
-                        </div>
-                        <h5 class="mt-4 mb-2">Montagem</h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum,ducimus recusandae, doloremque quam non dolore obcaecati!</p>
+                    <div class="col-md-3">
+                        <h3 class="text-primary">ATENDIMENTO</h3>
                     </div>
-                </div>
-                <div class="col-lg-3 col-sm-6 coll-box">
-                    <div class="service card-effect">
-                        <div class="iconbox">
-                            <i class="bx bxs-rocket"></i>
-                        </div>
-                        <h5 class="mt-4 mb-2">Acabamento</h5>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rerum,ducimus recusandae, doloremque quam non dolore obcaecati!</p>
+                    <div class="col-md-3">
+                        <h3 class="text-primary">PREÇO JUSTO</h3>
                     </div>
                 </div>
             </div>
@@ -125,91 +100,24 @@
     <!--FIM CTA-->
     <!--INICIO HOME PRODUTOS-->
     <section class="produtos-home">
-        <div class="container glass-effect">
-            <div class="row">
-                <div class="col-12 section-intro">
-                    <h2 class="text-primary mb-3">Alguns produtos...</h2>
-                    <p class="fsc-p mb-5">Aqui você poderá ter mais informações de como são confeccionados os nossos produtos, e assim tirar suas dúvidas. Clique no botão de informações e saiba mais sobre cada produto! </p>
-                </div>
-            </div>
 
-            <div class="row gy-4">
-                <div class="col-lg-4">
-                    <div class="project-wrapper">
-                        <img src="./img/img_4.jpg" alt="">
-                        <a href="https://dunamisgrafdg.web.app/index.html"><i class="bx bxs-info-circle btn btn-danger"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="row gy-4">
-                        <div class="col-lg-12">
-                            <div class="project-wrapper">
-                                <img src="./img/fundoHome.jpg" alt="">
-                                <a href="#"><i class="bx bxs-info-circle btn btn-danger"></i></a>
-                            </div>
-                        </div>
-                        <div class="col-lg-12">
-                            <div class="project-wrapper">
-                                <img src="./img/slider2.jpg" alt="">
-                                <a href=""><i class="bx bxs-info-circle btn btn-danger"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="project-wrapper">
-                        <img src="./img/slider1.jpg" alt="">
-                        <a href="#"><i class="bx bxs-info-circle btn btn-danger"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
     </section>
     <!--FIM HOME PRODUTOS-->
 
-    <!--iNICIO CTA2-->
-    <div class="cta2">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 mb-5 mt-5">
-                    <h2 class="text-white">Atendemos a sua necessidade !</h2>
-                    <p class="text-white">Desenvolvemos e produzimos diversos produtos, respeitando e atendendo as suas necessidades. Tudo com a maior eficiência e melhor qualidade.
-                    </p>
-                </div>
-                <div class="col-lg-6 mb-5">
-                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner" style="border-radius: 10px; position: relative;">
-                            <div class="carousel-item active">
-                                <img src="./img/jpg/imagem1.jpg" class="d-block w-100 " alt="img-qualidade">
-                            </div>
-                            <div class="carousel-item ">
-                                <img src="./img/jpg/imagem2.jpg " class="d-block w-100 " alt="img-cliente">
-                            </div>
-                            <div class="carousel-item ">
-                                <img src="./img/jpg/imagem3.jpg" class="d-block w-100 " alt="img-">
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--FIM CTA2-->
-
     <!--INICIO FOOTER-->
-    <footer class="bg-dark text-white pt-5 pb-4">
+    <footer class="footer text-white pt-5 pb-4">
         <div class="container text-center text-md-left ">
 
             <div class="row text-center text-md-left ">
 
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-5 mb-5 ">
                     <a href="# ">
-                        <img src="./img/jpg/Logo-DMD.png " alt="Logo DMD " style="width: 170px; ">
+                        <img src="./assets/img/logo-footer.png " alt="Logo DMD " style="width: 170px; ">
                     </a>
                 </div>
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 ">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Sobre</h5>
-                    <p class="text-center">Somos especialista em Silk-Screen de Painéis Frontais, Etiquetas Adesivos Teclados de Membrana nos mais diversos tipos de materiais.</p>
+                    <p class="text-center">Somos especialista em Silk-Screen de Painéis Frontais, Etiquetas Adesivos e Teclados de Membrana nos mais diversos tipos de materiais.</p>
                 </div>
                 <div class="col-md-3 col-lg- col-xl-3 mx-auto mt-3 ">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Produtos</h5>
@@ -239,13 +147,13 @@
             </div>
         </div>
     </footer>
-    <div style=" display: flex; align-items: center; justify-content: center; height: 50px; font-size: 17px; font-weight: 600; background-color: rgb(31, 33, 37); " class="text-primary text-center ">D<span class="text-danger
+    <div style=" display: flex; align-items: center; justify-content: center; height: 50px; font-size: 17px; font-weight: 600; background-color: #0b1a20; " class="text-primary text-center ">D<span class="text-danger
                         ">M</span>D &copy;2022 <span style="font-size: 17px; ">&nbsp;/ Todos os direitos reservados.</span></div>
     <!--FIM FOOTER-->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
-    <script src="main.js "></script>
+    <script src="./assets/js/main.js "></script>
 </body>
 
 </html>
