--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="container container-top">
             <div class="row">
                 <div class="col-lg-7 mx-auto text-center container-content">
-                    <h1 class="display-4 text-white h1-top">Tudo o que você precisa em impressão Silk-Screen!</h1>
+                    <h1 class="display-4 text-white h1-top mt-5">Tudo o que você precisa em impressão Silk-Screen!</h1>
                     <p class="text-white my-3 p-top">Aqui você encontrará uma solução personalizada de acordo com a sua necessidade.</p>
                     <a class="btn btn-secondary" href="#">Conheça os nossos serviços</a>
                 </div>
@@ -61,22 +61,121 @@
     <section class="secundaria-home overflow-hidden">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-12">
                     <h2 class="text-primary">PODEMOS AJUDAR</h2>
-                    <p class="mt-3">Desenvolvemos e produzimos o seu produto de acordo com a sua necessidade. Podemos contribuir em seus projetos com nossa grande experiência e assim gerar excelentes resultados para sua empresa.</p>
+                    <p class="mt-3 mb-4">Desenvolvemos e produzimos o seu produto de acordo com a sua necessidade. Podemos contribuir em seus projetos com nossa grande experiência e assim gerar excelentes resultados para sua empresa.</p>
                 </div>
-                <div class="row mt-5">
-                    <div class="col-md-3">
-                        <h3 class="text-primary">QUALIDADE</h3>
+                <div class="row gy-4">
+                    <div class="col-lg-4 col-md-12">
+                        <div class="service">
+                            <h3>QUALIDADE</h3>
+                            <div class="icon-box">
+                                <i class="bi bi-star-fill star1"></i>
+                                <i class="bi bi-star-fill star2"></i>
+                                <i class="bi bi-star-fill star3"></i>
+                                <i class="bi bi-star-fill star4"></i>
+                                <i class="bi bi-star-fill star5"></i>
+                            </div>
+                            <p>Desde a matéria-prima, equipamentos, processos, tudo é pensado para se ter alta qualidade nos produtos e serviços.</p>
+                        </div>
                     </div>
-                    <div class="col-md-3">
-                        <h3 class="text-primary">EXPERIÊNCIA</h3>
+                    <div class="col-lg-4 col-md-12">
+                        <div class="service">
+                            <h3>EXPERIÊNCIA</h3>
+                            <div class="icon-box">
+                                <i class="bi bi-people-fill"></i>
+                                <i class="bi bi-gear"></i>
+                            </div>
+                            <p>Conte com nossa experiência de décadas em fornecer soluções adequadas para diversas necessidades e situações.</p>
+                        </div>
                     </div>
-                    <div class="col-md-3">
-                        <h3 class="text-primary">ATENDIMENTO</h3>
+                    <div class="col-lg-4 col-md-12">
+                        <div class="service">
+                            <h3>ATENDIMENTO</h3>
+                            <div class="icon-box">
+                                <i class="bi bi-person-check-fill"></i>
+                            </div>
+                            <p>Prestamos atendimento personalizado para nossos clientes buscando compreender suas necessidades.</p>
+                        </div>
                     </div>
-                    <div class="col-md-3">
-                        <h3 class="text-primary">PREÇO JUSTO</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--FIM SECTION HOME SECUNDARIA-->
+    <!--iNICIO SECTION HOME PRODUTOS-->
+    <section class="secundaria-produtos overflow-hidden">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-primary">NOSSOS PRODUTOS</h2>
+                    <p class="mt-3 mb-4 sub-title-produtos">Conheça mais sobre os nossos produtos </p>
+                </div>
+                <div class="row gy-4 mt-5">
+                    <div class="col-lg-6 col-md-6">
+                        <div class="produtos">
+                            <h3 class="display-6">Os Melhores Produtos</h3>
+                            <p>Somos especialista na fabricação de teclados de membrana, painéis em policarbonato, etiquetas técnicas e circuito flexível, atuando nos mais diversos seguimentos do mercado.</p>
+                        </div>
+                        <a class="btn btn-danger mt-3 mb-5" href="#">Saiba mais</a>
+                    </div>
+                    <div class="col-lg-6 col-md-6">
+                        <div class="container-carrosel">
+                            <div id="carouselCaptions" class="carousel slide" data-bs-ride="carousel">
+                                <div class="carousel-indicators">
+                                    <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                    <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                    <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                                    <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                                    <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                                </div>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="./assets/img/slider/home-teclado-memb.jpg" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
+                                            <h5>First slide label</h5>
+                                            <p>Some representative placeholder content for the first slide.</p>
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="./assets/img/slider/home-painel-frontal.jpg" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
+                                            <h5>Second slide label</h5>
+                                            <p>Some representative placeholder content for the second slide.</p>
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="./assets/img/slider/home-circuito.jpg" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
+                                            <h5>Third slide label</h5>
+                                            <p>Some representative placeholder content for the third slide.</p>
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="./assets/img/slider/home-etiq-tec.jpg" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
+                                            <h5>Third slide label</h5>
+                                            <p>Some representative placeholder content for the third slide.</p>
+                                        </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="./assets/img/slider/home-peca-tec.jpg" class="d-block w-100" alt="...">
+                                        <div class="carousel-caption d-none d-md-block">
+                                            <h5>Third slide label</h5>
+                                            <p>Some representative placeholder content for the third slide.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselCaptions" data-bs-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Previous</span>
+                            </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselCaptions" data-bs-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Next</span>
+                            </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -147,8 +246,7 @@
             </div>
         </div>
     </footer>
-    <div style=" display: flex; align-items: center; justify-content: center; height: 50px; font-size: 17px; font-weight: 600; background-color: #0b1a20; " class="text-primary text-center ">D<span class="text-danger
-                        ">M</span>D &copy;2022 <span style="font-size: 17px; ">&nbsp;/ Todos os direitos reservados.</span></div>
+    <div class="text-primary text-center div-footer-bottom">D<span class="text-danger">M</span>D &copy; 2022 <span>&nbsp;/ Todos os direitos reservados.</span></div>
     <!--FIM FOOTER-->
 
 
