--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <h2 class="text-primary">PODEMOS AJUDAR</h2>
                     <p class="mt-3 mb-4">Desenvolvemos e produzimos o seu produto de acordo com a sua necessidade. Podemos contribuir em seus projetos com nossa grande experiência e assim gerar excelentes resultados para sua empresa.</p>
                 </div>
-                <div class="row gy-4">
+                <div class="row gy-4 div-cards">
                     <div class="col-lg-4 col-md-12">
                         <div class="service">
                             <h3>QUALIDADE</h3>
@@ -119,7 +119,7 @@
                         </div>
                         <a class="btn btn-danger mt-3 mb-5" href="#">Saiba mais</a>
                     </div>
-                    <div class="col-lg-6 col-md-6">
+                    <div class="col-lg-6 col-md-12">
                         <div class="container-carrosel">
                             <div id="carouselCaptions" class="carousel slide" data-bs-ride="carousel">
                                 <div class="carousel-indicators">
